--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
 								Spatial Information Technology
 							</h4>
 							<p>
-								<h5>Major Courses:</h5>Principles And Methods Of Remote Sensing Analysis, Progress In
-								Land Science And 3s Technology, Frontier Of Agricultural Resources And Environmental
+								<h5>Major Courses:</h5>Principles and Methods Of Remote Sensing Analysis, Progress In
+								Land Science and 3S Technology, Frontier Of Agricultural Resources and Environmental
 								Science, Advanced Plant Nutrition, Soil Physics, Etc.
 							</p>
 							<p>
@@ -292,7 +292,7 @@
 							</h4>
 							<p>
 								<h5>Major Courses:</h5>GIS Principle, Remote Sensing Digital Image Processing, Virtual
-								Reality And GIS New Media, Modern Cartography, GIS Technology, Numerical Calculation,
+								Reality and GIS New Media, Modern Cartography, GIS Technology, Numerical Calculation,
 								Modern Physical Geography, GIS Geoscience Analysis, Etc.
 
 							</p>
@@ -316,11 +316,11 @@
 								System </h4>
 							<p>
 								<h5>Major Courses:</h5>
-								Database Principle And Application, Digital Mapping Principle And Method, Remote Sensing
-								Principle And Method, Object-Oriented Programming, Remote Sensing Digital Image
-								Processing, Geographic Information System, Remote Sensing Image Analysis And
-								Application, Resource And Environmental Information System, Digital Photogrammetry, Web
-								GIS, Spatial Analysis And Model, Etc.
+								Database Principle and Application, Digital Mapping Principle and Method, Remote Sensing
+								Principle and Method, Object-Oriented Programming, Remote Sensing Digital Image
+								Processing, Geographic Information System, Remote Sensing Image Analysis and
+								Application, Resource and Environmental Information System, Digital Photogrammetry, Web
+								GIS, Spatial Analysis and Model, Etc.
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -373,7 +373,7 @@
 							<p>2021.09 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Shaanxi Smart Agricultural Decision-Making System And Big Data Analysis Platform
+							<h4>Shaanxi Smart Agricultural Decision-Making System and Big Data Analysis Platform
 								| Participant</h4>
 							<span>
 								<h5 style="display: inline;">Project Description:</h5>
@@ -435,7 +435,7 @@
 							<p>2017.04 - 2018.05</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Study On Remote Sensing Monitoring And Early Warning System Of Cyanobacteria Bloom In
+							<h4>Study On Remote Sensing Monitoring and Early Warning System Of Cyanobacteria Bloom In
 								Dianchi Lake | Principal</h4>
 							<span>
 								<h5 style="display: inline;">Project Description:</h5>Using Fortran, C #, VTK, and
@@ -484,7 +484,7 @@
 							<i class="fa fa-briefcase"></i>
 						</div>
 						<div class="timeline-header">
-							<h3> National Science And Technology Innovation Projects </h3>
+							<h3> National Science and Technology Innovation Projects </h3>
 							<p>2013.12 - 2015.06</p>
 						</div>
 						<div class="timeline-content">
@@ -562,7 +562,7 @@
 						<tr>
 							<td><a href="images/SoftwareCopyright/4_GeologicalStructure.jpg" target="_blank">Structural
 									Surface
-									Recognition And Intelligent Analysis System Of Layered Geological
+									Recognition and Intelligent Analysis System Of Layered Geological
 									Body</a></td>
 							<td>2019SR0706808</td>
 							<td>2019.07.09</td>
@@ -638,10 +638,10 @@
 				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent Postgraduate of Nanjing Normal University (Four
 					times:&nbsp;<a href="images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank"
 						style="text-decoration: underline;">2017
-						Shool-Level</a> / <a href="images/2017_Excellent_graduate_student_at_college_level.jpg"
+						School-Level</a> / <a href="images/2017_Excellent_graduate_student_at_college_level.jpg"
 						target="_blank" style="text-decoration: underline;">2017
 						College-Level</a> / <a href="images/2018_Excellent_graduate_student_at_school_level.jpg"
-						target="_blank" style="text-decoration: underline;">2018 Shool-Level</a> / <a
+						target="_blank" style="text-decoration: underline;">2018 School-Level</a> / <a
 						href="images/2018_Excellent_graduate_student_at_college_level.jpg" target="_blank"
 						style="text-decoration: underline;">2018
 						College-Level</a>
@@ -650,9 +650,9 @@
 				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent League Member of Nanjing Normal University (Two
 					times:&nbsp;<a href="images/2017_Excellent_League_member_at_school_level.jpg" target="_blank"
 						style="text-decoration: underline;">2017
-						Shool-Level</a> / <a href="images/2018_Excellent_League_member_at_school_level.jpg"
+						School-Level</a> / <a href="images/2018_Excellent_League_member_at_school_level.jpg"
 						target="_blank" style="text-decoration: underline;">2018
-						Shool-Level</a> )
+						School-Level</a> )
 				</li>
 				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐class scholarship of Nanjing Normal University (Two times)
 				</li>
