--- a/cn/index.html
+++ b/cn/index.html
@@ -355,7 +355,7 @@
 							<p>2021.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
-							<h4>陕西省智慧农业决策系统和大数据分析平台 | 参与者</h4>
+							<h4>陕西省智慧农业决策系统和大数据分析平台 | <span style="color: darkblue;">参与者</span></h4>
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>
 								构建旱地农业系统大数据分析平台和“智慧果园”决策支持平台。构建智慧农业技术体系，支撑农业、果业、气象、水利等业务部门灾害监测、预警预报、农业保险、产量预报等技术需求。
@@ -376,7 +376,7 @@
 							<p>2020.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
-							<h4>新疆棉花决策管理支持系统 | 参与者</h4>
+							<h4>新疆棉花决策管理支持系统 | <span style="color: darkblue;">参与者</span></h4>
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>
 								构建一个棉花生产决策管理系统及服务平台，提供科学化、规模化、标准化的技术服务，可实现用户/地块管理、田间生产任务管理、作物长势/病虫害/环境/灾害预测预警、农资服务管理、农技服务管理和农机服务管理等功能。
@@ -397,7 +397,7 @@
 							<p>2017.04 - 2018.05</p>
 						</div>
 						<div class="timeline-content">
-							<h4>滇池蓝藻水华遥感监测及预警体系研究 | 负责人</h4>
+							<h4>滇池蓝藻水华遥感监测及预警体系研究 | <span style="color: darkblue;">负责人</span></h4>
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>利用 Fortran、C#、VTK 与插件技术，基于 ArcGIS Engine
 								平台，结合
@@ -418,7 +418,7 @@
 							<p>2017.04 - 2018.05</p>
 						</div>
 						<div class="timeline-content">
-							<h4>邳州市地下水脆弱性评价 | 负责人</h4>
+							<h4>邳州市地下水脆弱性评价 | <span style="color: darkblue;">负责人</span></h4>
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>基于 ArcGIS 软件、C#
 								开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作。
@@ -437,7 +437,7 @@
 							<p>2013.12 - 2015.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>《黄土坡耕地微地形数值模拟及机理研究》 | 负责人</h4>
+							<h4>《黄土坡耕地微地形数值模拟及机理研究》| <span style="color: darkblue;">负责人</span></h4>
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>
 								采用人工模拟降雨试验和微地形扫描测量等方法，动态监测坡面水蚀过程中侵蚀形态发生与演变过程，结合
