--- a/index.html
+++ b/index.html
@@ -260,14 +260,13 @@
 							<p>2020.09 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Curtin University, Australia -
-							</h4>
-							<h4>Northwest A&F University - College of Resources and Environment - Land Resources and
+							<h4>Northwest A&F University - College of Natural Resources and Environment - Land Resources
+								and
 								Spatial Information Technology
 							</h4>
 							<p>
-								<h5>Major Courses:</h5>Principles and Methods Of Remote Sensing Analysis, Progress In
-								Land Science and 3S Technology, Frontier Of Agricultural Resources and Environmental
+								<h5>Major Courses:</h5>Principles and Methods of Remote Sensing Analysis, Progress In
+								Land Science and 3S Technology, Frontier of Agricultural Resources and Environmental
 								Science, Advanced Plant Nutrition, Soil Physics, Etc.
 							</p>
 							<p>
@@ -374,7 +373,7 @@
 						</div>
 						<div class="timeline-content">
 							<h4>Shaanxi Smart Agricultural Decision-Making System and Big Data Analysis Platform
-								| Participant</h4>
+								<br><span style="color: darkblue;">Participant</span></h4>
 							<span>
 								<h5 style="display: inline;">Project Description:</h5>
 								Build a big data analysis platform for dryland agricultural systems and a "smart
@@ -405,7 +404,8 @@
 							<p>2020.09 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Xinjiang Cotton Decision Management Support System | Participant</h4>
+							<h4>Xinjiang Cotton Decision Management Support System<br><span
+									style="color: darkblue;">Participant</span></h4>
 							<span>
 								<h5 style="display: inline;">Project Description:</h5>
 								Build a cotton production decision management system and service platform, provide
@@ -435,8 +435,8 @@
 							<p>2017.04 - 2018.05</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Study On Remote Sensing Monitoring and Early Warning System Of Cyanobacteria Bloom In
-								Dianchi Lake | Principal</h4>
+							<h4>Study On Remote Sensing Monitoring and Early Warning System of Cyanobacteria Bloom In
+								Dianchi Lake<br><span style="color: darkblue;">Principal</span></h4>
 							<span>
 								<h5 style="display: inline;">Project Description:</h5>Using Fortran, C #, VTK, and
 								plug-in technology, based on the ArcGIS Engine platform, combined with the FVCOM model,
@@ -462,7 +462,8 @@
 							<p>2017.04 - 2018.05</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Groundwater Vulnerability Assessment in Pizhou City | Principal</h4>
+							<h4>Groundwater Vulnerability Assessment in Pizhou City<br><span style="color: darkblue;">
+									Principal</span></h4>
 							<span>
 								<h5 style="display: inline;">Project Description:</h5>Based on ArcGIS software and C #
 								development, according to the geological data, meteorological data, natural geographical
@@ -488,8 +489,9 @@
 							<p>2013.12 - 2015.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Numerical Simulation and Mechanism Study on Microtopography of Loess Slope Farmland |
-								Principal</h4>
+							<h4>Numerical Simulation and Mechanism Study on Microtopography of Loess Slope
+								Farmland<br><span style="color: darkblue;">
+									Principal</span></h4>
 							<span>
 								<h5 style="display: inline;">Project Description: </h5>
 								Using the methods of artificial simulated rainfall test and microtopography scanning
@@ -562,7 +564,7 @@
 						<tr>
 							<td><a href="images/SoftwareCopyright/4_GeologicalStructure.jpg" target="_blank">Structural
 									Surface
-									Recognition and Intelligent Analysis System Of Layered Geological
+									Recognition and Intelligent Analysis System of Layered Geological
 									Body</a></td>
 							<td>2019SR0706808</td>
 							<td>2019.07.09</td>
