--- a/cn/index.html
+++ b/cn/index.html
@@ -87,7 +87,8 @@
 
 					<h5>Hello, World.</h5>
 					<h6></h6>
-					<h1>I'm 任 凯。</h1>
+					<h1>I'm <a href="https://staffportal.curtin.edu.au/staff/profile/view/kai-ren-500cf978/"
+							style="color: white;" target="_blank">任 凯</a>。</h1>
 					<p class="intro-position" style="margin-bottom: 0.5em;">
 						<span>鸡丝与农业边缘徘徊的小白 </span>
 					</p>
@@ -160,7 +161,13 @@
 					</li>
 					<li>
 						<strong>Email:</strong>
-						<span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span>
+						<span><a href="kai.ren@curtin.edu.au">kai.ren@curtin.edu.au</a></span>
+						<!-- <span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span> -->
+					</li>
+					<li>
+						<strong>Curtin Profile:</strong>
+						<span><a href="https://staffportal.curtin.edu.au/staff/profile/view/kai-ren-500cf978/"
+								target="_blank">Kai Ren - Curtin University</a></span>
 					</li>
 				</ul> <!-- /info-list -->
 			</div>
@@ -1000,9 +1007,10 @@
 					<i class="icon-mail"></i>
 				</div>
 				<h5>邮 件</h5>
-				<p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
+				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
+				</p> -->
+				<p><a href="kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a>
 				</p>
-
 			</div>
 
 			<div class="col-four tab-full">
@@ -1010,8 +1018,8 @@
 					<i class="icon-phone"></i>
 				</div>
 				<h5>电 话</h5>
-				<p style="color: #888888"> &plus;86 18851138358<br>
-				</p>
+				<!-- <p style="color: #888888"> &plus;86 18851138358<br> </p> -->
+				<p style="color: #888888"> &plus;61 0468698085<br> </p>
 			</div>
 		</div> <!-- /contact-info -->
 	</section> <!-- /contact -->
