--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 				<div class="col-twelve">
 
 					<h5>Hello, World.</h5>
-					<h1>I'm Kai Ren.</h1>
+					<h1>I'm <a href="https://staffportal.curtin.edu.au/staff/profile/view/kai-ren-500cf978/"
+							style="color: white;" target="_blank">Kai Ren</a>.</h1>
 
 					<p class="intro-position">
 						<span>GIS & Agriculture </span>
@@ -162,7 +163,13 @@
 					</li>
 					<li>
 						<strong>Email:</strong>
+						<span><a href="kai.ren@curtin.edu.au">kai.ren@curtin.edu.au</a></span>
 						<span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span>
+					</li>
+					<li>
+						<strong>Curtin Profile:</strong>
+						<span><a href="https://staffportal.curtin.edu.au/staff/profile/view/kai-ren-500cf978/"
+								target="_blank">Kai Ren - Curtin University</a></span>
 					</li>
 				</ul> <!-- /info-list -->
 			</div>
@@ -1123,7 +1130,9 @@
 					<i class="icon-mail"></i>
 				</div>
 				<h5>Email Me At</h5>
-				<p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
+				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
+				</p> -->
+				<p><a href="kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a>
 				</p>
 			</div>
 
@@ -1132,8 +1141,8 @@
 					<i class="icon-phone"></i>
 				</div>
 				<h5>Call Me At</h5>
-				<p style="color: #888888"> &plus;86 18851138358<br>
-				</p>
+				<!-- <p style="color: #888888"> &plus;86 18851138358<br></p> -->
+				<p style="color: #888888"> &plus;61 0468698085<br> </p>
 			</div>
 
 		</div> <!-- /contact-info -->
