--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					<li>
 						<strong>Email:</strong>
 						<span><a href="kai.ren@curtin.edu.au">kai.ren@curtin.edu.au</a></span>
-						<span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span>
+						<!-- <span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span> -->
 					</li>
 					<li>
 						<strong>Curtin Profile:</strong>
