--- a/cn/index.html
+++ b/cn/index.html
@@ -105,12 +105,12 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
+			<li><a href="https://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 			<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="http://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
+			<li><a href="https://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-			<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
+			<li><a href="https://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
@@ -157,7 +157,7 @@
 					</li>
 					<li>
 						<strong>Website:</strong>
-						<span><a href="http://www.renkaigis.cn">www.renkaigis.cn</a></span>
+						<span><a href="https://www.renkaigis.cn">www.renkaigis.cn</a></span>
 					</li>
 					<li>
 						<strong>Email:</strong>
@@ -605,15 +605,15 @@
 
 			<h3>参与的一些小项目: </h3>
 			<ul class="disc">
-				<li><a href="http://you.renkaigis.cn/" target="_blank">大油作为 —— 含油污泥修复专家 <i class="fa  fa-trophy"
+				<li><a href="https://you.renkaigis.cn/" target="_blank">大油作为 —— 含油污泥修复专家 <i class="fa  fa-trophy"
 							style="color:goldenrod;"></i></a><br /><a href="../images/2022_Provincial_Bronze_Award.jpg"
 						target="_blank" style="text-decoration: underline;">
 						[ 省级铜奖 ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
 						href="../images/2022_School_Silver_Award.jpg" target="_blank"
 						style="text-decoration: underline;">[
 						校级银奖 ]</a></li>
-				<li><a href="http://moyu.renkaigis.cn/" target="_blank">擅魔师 —— 乡村振兴战略下助力镇巴县魔芋产业发展</a></li>
-				<li><a href="http://soildoc.renkaigis.cn/" target="_blank">果土绸缪 —— 土壤诊断医生</a>
+				<li><a href="https://moyu.renkaigis.cn/" target="_blank">擅魔师 —— 乡村振兴战略下助力镇巴县魔芋产业发展</a></li>
+				<li><a href="https://soildoc.renkaigis.cn/" target="_blank">果土绸缪 —— 土壤诊断医生</a>
 				</li>
 			</ul>
 			<h3>业余爱好： </h3>
@@ -948,8 +948,8 @@
 					<div class="service-content">
 						<h3>Photography</h3>
 						<p class="desc">业余爱好摄影拍照，常用设备 iPhone 12 Pro Max，佳能微单 M200。喜欢拍风景、静物，也喜欢拍人像。我的摄影作品在这里：<a
-								href="http://photo.renkaigis.cn"
-								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.cn</a>
+								href="https://photo.renkaigis.cn"
+								style="color: rgba(255, 255, 255, 0.6)">https://photo.renkaigis.cn</a>
 						</p>
 					</div>
 				</div>
@@ -1032,12 +1032,12 @@
 		<div class="row">
 			<div class="col-six tab-full pull-right social">
 				<ul class="footer-social">
-					<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
+					<li><a href="https://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 					<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="http://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
+					<li><a href="https://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-					<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
+					<li><a href="https://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 				</ul>
 			</div>
 
