--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
+			<li><a href="https://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 			<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="http://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
+			<li><a href="https://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-			<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
+			<li><a href="https://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
@@ -159,7 +159,7 @@
 					</li>
 					<li>
 						<strong>Website:</strong>
-						<span><a href="http://www.renkaigis.cn">www.renkaigis.cn</a></span>
+						<span><a href="https://www.renkaigis.cn">www.renkaigis.cn</a></span>
 					</li>
 					<li>
 						<strong>Email:</strong>
@@ -692,18 +692,18 @@
 
 			<h3>Some projects: </h3>
 			<ul class="disc">
-				<li><a href="http://you.renkaigis.cn/" target="_blank">Big Oil Benefits —— Oily Sludge
+				<li><a href="https://you.renkaigis.cn/" target="_blank">Big Oil Benefits —— Oily Sludge
 						Remediation Expert <i class="fa  fa-trophy" style="color:goldenrod;"></i></a><br /><a
 						href="images/2022_Provincial_Bronze_Award.jpg" target="_blank"
 						style="text-decoration: underline;">
 						[ Provincial Bronze Award ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
 						href="images/2022_School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
 						School Silver Award ]</a></li>
-				<li><a href="http://moyu.renkaigis.cn/" target="_blank">ShanMoShi —— Assisting the Development of the
+				<li><a href="https://moyu.renkaigis.cn/" target="_blank">ShanMoShi —— Assisting the Development of the
 						Konjac Industry in
 						Zhenba County Under the Rural Revitalization Strategy
 					</a></li>
-				<li><a href="http://soildoc.renkaigis.cn/" target="_blank">SoilDoctor —— Soil Diagnosis Doctor </a>
+				<li><a href="https://soildoc.renkaigis.cn/" target="_blank">SoilDoctor —— Soil Diagnosis Doctor </a>
 				</li>
 			</ul>
 
@@ -1069,8 +1069,8 @@
 						<h3>Photography</h3>
 						<p class="desc">Hobbies photography, common equipment iPhone 12 Pro Max, Canon M200. I
 							like to take pictures of scenery, still life, and portraits. My photography works are here:
-							<a href="http://photo.renkaigis.cn"
-								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.cn</a>
+							<a href="https://photo.renkaigis.cn"
+								style="color: rgba(255, 255, 255, 0.6)">https://photo.renkaigis.cn</a>
 						</p>
 					</div>
 				</div>
@@ -1159,12 +1159,12 @@
 			<div class="col-six tab-full pull-right social">
 
 				<ul class="footer-social">
-					<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
+					<li><a href="https://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 					<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="http://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
+					<li><a href="https://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-					<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
+					<li><a href="https://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 				</ul>
 
 			</div>
