--- a/cn/index.html
+++ b/cn/index.html
@@ -248,7 +248,8 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>访问学者</h3>
+							<h3><a href="https://staffportal.curtin.edu.au/staff/profile/view/kai-ren-500cf978/"
+									target="_blank" style="color:#313131">访问学者</a></h3>
 							<p>2023.03 - 至今</p>
 						</div>
 						<div class="timeline-content">
