--- a/index.html
+++ b/index.html
@@ -246,8 +246,9 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>Ph.D. Visiting Student</h3>
-							<p>2023.03 - Current</p>
+							<h3><a href="https://staffportal.curtin.edu.au/staff/profile/view/kai-ren-500cf978/"
+									target="_blank" style="color:#313131">Visiting Research Associate</a></h3>
+							<p>Mar. 2023 - Current</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Curtin University, Australia - School of Design and the Built Environment
@@ -264,7 +265,7 @@
 						</div>
 						<div class="timeline-header">
 							<h3>Ph.D. Student</h3>
-							<p>2020.09 - Current</p>
+							<p>Sep. 2020 - Current</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Northwest A&F University - College of Natural Resources and Environment - Land Resources
@@ -289,7 +290,7 @@
 						</div>
 						<div class="timeline-header">
 							<h3>Master</h3>
-							<p>2016.09 - 2019.06</p>
+							<p>Sep. 2016 - Jun. 2019</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Nanjing Normal University-College of Geographic Sciences - Key Laboratory of Virtual
@@ -314,7 +315,7 @@
 						</div>
 						<div class="timeline-header">
 							<h3>Bachelor</h3>
-							<p>2012.09 - 2016.06</p>
+							<p>Sep. 2012 - Jun. 2016</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Northwest A&F University - College of Natural Resources and Environment - Geographic
@@ -376,7 +377,7 @@
 							<h3>Sanqin Innovation Team of Smart Agriculture
 
 							</h3>
-							<p>2021.09 - Current</p>
+							<p>Sep. 2021 - Current</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Shaanxi Smart Agricultural Decision-Making System and Big Data Analysis Platform
@@ -408,7 +409,7 @@
 						<div class="timeline-header">
 							<h3>Xinjiang Cotton Management System
 							</h3>
-							<p>2020.09 - Current</p>
+							<p>Sep. 2020 - Current</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Xinjiang Cotton Decision Management Support System<br><span
@@ -439,7 +440,7 @@
 						</div>
 						<div class="timeline-header">
 							<h3>Projects of Kunming Environmental Monitoring Center </h3>
-							<p>2017.04 - 2018.05</p>
+							<p>Apr. 2017 - May. 2018</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Study On Remote Sensing Monitoring and Early Warning System of Cyanobacteria Bloom In
@@ -466,7 +467,7 @@
 						</div>
 						<div class="timeline-header">
 							<h3>Projects of Pizhou Water Conservancy Bureau </h3>
-							<p>2017.04 - 2018.05</p>
+							<p>Apr. 2017 - May. 2018</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Groundwater Vulnerability Assessment in Pizhou City<br><span style="color: darkblue;">
@@ -493,7 +494,7 @@
 						</div>
 						<div class="timeline-header">
 							<h3> National Science and Technology Innovation Projects </h3>
-							<p>2013.12 - 2015.06</p>
+							<p>Dec. 2013 - Jun. 2015</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Numerical Simulation and Mechanism Study on Microtopography of Loess Slope
@@ -574,39 +575,39 @@
 									Recognition and Intelligent Analysis System of Layered Geological
 									Body</a></td>
 							<td>2019SR0706808</td>
-							<td>2019.07.09</td>
+							<td>Jul.2019</td>
 						</tr>
 						<tr>
 							<td><a href="images/SoftwareCopyright/1_CBBMSystem.jpg" target="_blank">Dianchi Lake
 									Water Body Cyanobacteria Bloom Drift Simulation System</a></td>
 							<td>2018SR955442</td>
-							<td>2018.11.29</td>
+							<td>Nov.2018</td>
 						</tr>
 						<tr>
 							<td><a href="images/SoftwareCopyright/3_LargeWaterSystem.jpg" target="_blank">Simulation
 									System of
 									Total Suspended Solids in Large Water Bodies</a> </td>
 							<td>2018SR798096</td>
-							<td>2018.10.08</td>
+							<td>Oct.2018</td>
 						</tr>
 						<tr>
 							<td><a href="images/SoftwareCopyright/3_HydroMSystem.jpg" target="_blank">Hydrogeological
 									Modeling and Simulation System</a> </td>
 							<td>2017SR427979</td>
-							<td>2017.08.07</td>
+							<td>Aug.2017</td>
 						</tr>
 						<tr>
 							<td><a href="images/SoftwareCopyright/2_TMASystem.jpg" target="_blank">3D Modeling and
 									Analysis System of Underground Space</a> </td>
 							<td>2017SR431955</td>
-							<td>2017.08.06</td>
+							<td>Aug.2017</td>
 						</tr>
 						<tr>
 							<td><a href="images/SoftwareCopyright/5_Geo_Grid_System.jpg"
 									target="_blank">Multi-Dimensional
 									Grid Adaptive Generation System For Geoscience Simulation</a></td>
 							<td>2017SR374939</td>
-							<td>2017.07.17</td>
+							<td>Jul.2017</td>
 						</tr>
 						<tr>
 							<td><a href="images/SoftwareCopyright/4_GMSDVSystem.jpg" target="_blank">Dynamic
@@ -614,7 +615,7 @@
 									Geoscience Model Simulation</a>
 							</td>
 							<td>2017SR374929</td>
-							<td>2017.07.17</td>
+							<td>Jul.2017</td>
 						</tr>
 					</tbody>
 				</table>
