--- a/index.html
+++ b/index.html
@@ -268,7 +268,8 @@
 							<p>Sep. 2020 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Northwest A&F University - College of Natural Resources and Environment - Land Resources
+							<h4>Northwest A&F University (NWAFU) - College of Natural Resources and Environment - Land
+								Resources
 								and
 								Spatial Information Technology
 							</h4>
@@ -293,9 +294,10 @@
 							<p>Sep. 2016 - Jun. 2019</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Nanjing Normal University-College of Geographic Sciences - Key Laboratory of Virtual
+							<h4>Nanjing Normal University (NNU) - College of Geographic Sciences - Key Laboratory of
+								Virtual
 								Geographic Environment Ministry of Education (VGE) - Cartography and Geographic
-								Information System
+								Information System (GIS)
 							</h4>
 							<p>
 								<h5>Major Courses:</h5>GIS Principle, Remote Sensing Digital Image Processing, Virtual
@@ -318,9 +320,10 @@
 							<p>Sep. 2012 - Jun. 2016</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Northwest A&F University - College of Natural Resources and Environment - Geographic
+							<h4>Northwest A&F University (NWAFU) - College of Natural Resources and Environment -
+								Geographic
 								Information
-								System </h4>
+								System (GIS) </h4>
 							<p>
 								<h5>Major Courses:</h5>
 								Database Principle and Application, Digital Mapping Principle and Method, Remote Sensing
