--- a/cn/index.html
+++ b/cn/index.html
@@ -253,7 +253,7 @@
 							<p>2023.03 - 至今</p>
 						</div>
 						<div class="timeline-content">
-							<h4>澳大利亚科廷大学 - 设计与建筑环境学院
+							<h4>澳大利亚科廷大学（Curtin） - 设计与建筑环境学院
 							</h4>
 							<p>
 								<h5>研究方向：</h5>GIS 空间分析 | 气候变化与农业
@@ -270,7 +270,7 @@
 							<p>2020.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
-							<h4>西北农林科技大学 - 资源环境学院 - 土地资源与空间信息技术</h4>
+							<h4>西北农林科技大学（NWAFU） - 资源环境学院 - 土地资源与空间信息技术</h4>
 							<p>
 								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
 							</p>
@@ -289,7 +289,7 @@
 							<p>2016.09 - 2019.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>南京师范大学 - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统</h4>
+							<h4>南京师范大学（NNU） - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统（GIS）</h4>
 							<p>
 								<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
 							</p>
@@ -308,7 +308,7 @@
 							<p>2012.09 - 2016.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>西北农林科技大学 - 资源环境学院 - 地理信息系统</h4>
+							<h4>西北农林科技大学（NWAFU） - 资源环境学院 - 地理信息系统（GIS）</h4>
 							<p>
 								<h5>主修课程：</h5>
 								数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
