--- a/index.html
+++ b/index.html
@@ -101,12 +101,15 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="https://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
-			<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
-			<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="https://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
+			<li><a href="https://renkaigis.cn/" title="Home" target="_blank"><i class="fa fa-home fa-fw"></i></a></li>
+			<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i class="fa fa-github"></i></a>
+			</li>
+			<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
+						class="fa fa-twitter"></i></a></li>
+			<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i class="fa fa-book"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-			<li><a href="https://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
+			<li><a href="https://photo.renkaigis.cn/" title="Photography" target="_blank"><i
+						class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
@@ -159,11 +162,11 @@
 					</li>
 					<li>
 						<strong>Website:</strong>
-						<span><a href="https://www.renkaigis.cn">www.renkaigis.cn</a></span>
+						<span><a href="https://www.renkaigis.cn" target="_blank">www.renkaigis.cn</a></span>
 					</li>
 					<li>
 						<strong>Email:</strong>
-						<span><a href="kai.ren@curtin.edu.au">kai.ren@curtin.edu.au</a></span>
+						<span><a href="mailto:kai.ren@curtin.edu.au">kai.ren@curtin.edu.au</a></span>
 						<!-- <span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span> -->
 					</li>
 					<li>
@@ -209,7 +212,7 @@
 			<div class="col-twelve">
 				<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
 				<a href="assets/KaiRen_CV.pdf" title="Download CV" class="button button-primary"
-					target="__blank">Download CV</a>
+					target="_blank">Download CV</a>
 				<!-- <a href="http://d.renkaigis.com/resume/Resume_RenKai1.pdf" title="Download CV"
 					class="button button-primary" target="__blank">Download CV</a> -->
 			</div>
@@ -1073,8 +1076,8 @@
 						<h3>Photography</h3>
 						<p class="desc">Hobbies photography, common equipment iPhone 12 Pro Max, Canon M200. I
 							like to take pictures of scenery, still life, and portraits. My photography works are here:
-							<a href="https://photo.renkaigis.cn"
-								style="color: rgba(255, 255, 255, 0.6)">https://photo.renkaigis.cn</a>
+							<a href="https://photo.renkaigis.cn" style="color: rgba(255, 255, 255, 0.6)"
+								target="_blank">https://photo.renkaigis.cn</a>
 						</p>
 					</div>
 				</div>
@@ -1136,7 +1139,7 @@
 				<h5>Email Me At</h5>
 				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p> -->
-				<p><a href="kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a>
+				<p><a href="mailto:kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a>
 				</p>
 			</div>
 
@@ -1163,12 +1166,17 @@
 			<div class="col-six tab-full pull-right social">
 
 				<ul class="footer-social">
-					<li><a href="https://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
-					<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
-					<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
+					<li><a href="https://renkaigis.cn/" title="Home" target="_blank"><i
+								class="fa fa-home fa-fw"></i></a></li>
+					<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i
+								class="fa fa-github"></i></a></li>
+					<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
+								class="fa fa-twitter"></i></a></li>
+					<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
+								class="fa fa-book"></i></a></li>
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-					<li><a href="https://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
+					<li><a href="https://photo.renkaigis.cn/" title="Photography" target="_blank"><i
+								class="fa fa-camera"></i></a></li>
 				</ul>
 
 			</div>
