--- a/cn/index.html
+++ b/cn/index.html
@@ -110,6 +110,8 @@
 			</li>
 			<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
 						class="fa fa-twitter"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
+						class="fa fa-linkedin"></i></a></li>
 			<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i class="fa fa-book"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 			<li><a href="https://photo.renkaigis.cn/" title="Photography" target="_blank"><i
@@ -156,7 +158,7 @@
 					</li>
 					<li>
 						<strong>Research:</strong>
-						<span>气象要素空间插值预测 | 地理信息系统建模模拟 | 湖泊水动力数值模型模拟 | 前后端系统开发</span>
+						<span style="line-height: 2em;">气象要素空间插值预测 | 地理信息系统建模模拟 | 湖泊水动力数值模型模拟 | 前后端系统开发</span>
 					</li>
 					<li>
 						<strong>Website:</strong>
@@ -1042,6 +1044,8 @@
 								class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
 								class="fa fa-twitter"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
+								class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
 								class="fa fa-book"></i></a></li>
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
