--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 			</li>
 			<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
 						class="fa fa-twitter"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
+						class="fa fa-linkedin"></i></a></li>
 			<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i class="fa fa-book"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 			<li><a href="https://photo.renkaigis.cn/" title="Photography" target="_blank"><i
@@ -1172,6 +1174,8 @@
 								class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter" target="_blank"><i
 								class="fa fa-twitter"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/kai-ren-b9477111b/" title="LinkedIn" target="_blank"><i
+								class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
 								class="fa fa-book"></i></a></li>
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
